# tana-stdio

./: .gitignore  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
rust/: Cargo.toml
rust/src/: lib.rs
src/: index.ts
